--- a/about.html
+++ b/about.html
@@ -4,22 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
-  <title>الصفحة الرئيسية</title>
+  <title>عن الأكاديمية</title>
 </head>
 <body>
   <header>
     <nav>
       <ul>
+        <li><a href="index.html">الرئيسية</a></li>
         <li><a href="login.html">تسجيل الدخول</a></li>
-        <li><a href="about.html">عن الأكاديمية</a></li>
-        <li><a href="contact.html">اتصل بنا</a></li>
       </ul>
     </nav>
   </header>
-
+  
   <main>
-    <h1>مرحبًا بكم في أكاديمية التبيان</h1>
-    <p>نحن نقدم دروسًا في حفظ القرآن وتعليم اللغة العربية والدراسات الإسلامية.</p>
+    <h1>عن أكاديمية التبيان</h1>
+    <p>أكاديمية التبيان هي أكاديمية متخصصة في تعليم القرآن الكريم، اللغة العربية، والدراسات الإسلامية للطلاب من جميع أنحاء العالم.</p>
   </main>
 
   <footer>
