--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
-  <title>الصفحة الرئيسية</title>
+  <title>اتصل بنا</title>
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="login.html">تسجيل الدخول</a></li>
+        <li><a href="index.html">الرئيسية</a></li>
         <li><a href="about.html">عن الأكاديمية</a></li>
-        <li><a href="contact.html">اتصل بنا</a></li>
       </ul>
     </nav>
   </header>
-
+  
   <main>
-    <h1>مرحبًا بكم في أكاديمية التبيان</h1>
-    <p>نحن نقدم دروسًا في حفظ القرآن وتعليم اللغة العربية والدراسات الإسلامية.</p>
+    <h1>اتصل بنا</h1>
+    <p>لأي استفسار أو دعم، يرجى التواصل معنا على البريد الإلكتروني التالي:</p>
+    <p><a href="mailto:support@altebean.com">support@altebean.com</a></p>
   </main>
 
   <footer>
