--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول</title>
+    <title>تسجيل جديد</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,13 +12,16 @@
         <nav>
             <ul>
                 <li><a href="index.html">الرئيسية</a></li>
-                <li><a href="register.html">تسجيل جديد</a></li>
+                <li><a href="login.html">تسجيل الدخول</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>تسجيل الدخول</h2>
-        <form id="loginForm">
+        <h2>تسجيل جديد</h2>
+        <form id="registerForm">
+            <label for="username">اسم المستخدم:</label>
+            <input type="text" id="username" required>
+
             <label for="email">البريد الإلكتروني:</label>
             <input type="email" id="email" required>
 
@@ -34,7 +37,7 @@
                 <option value="student">طالب</option>
             </select>
 
-            <button type="submit">تسجيل الدخول</button>
+            <button type="submit">تسجيل</button>
         </form>
     </main>
     <footer>
