--- a/login.html
+++ b/login.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>تسجيل الدخول - أكاديمية التبيان</title>
+    <link rel="stylesheet" href="styles.css"> <!-- تأكد من إضافة تنسيق الـ CSS -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+    <script src="firebase.js" defer></script> <!-- ربط ملف JavaScript -->
 </head>
 <body>
     <header>
@@ -12,34 +16,31 @@
         <nav>
             <ul>
                 <li><a href="index.html">الرئيسية</a></li>
+                <li><a href="login.html">تسجيل الدخول</a></li>
                 <li><a href="register.html">تسجيل جديد</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
         <h2>تسجيل الدخول</h2>
         <form id="loginForm">
-            <label for="email">البريد الإلكتروني:</label>
-            <input type="email" id="email" required>
-
-            <label for="password">كلمة المرور:</label>
-            <input type="password" id="password" required>
-
-            <label for="location">محل الإقامة:</label>
-            <input type="text" id="location" required>
-
-            <label for="role">نوع المستخدم:</label>
-            <select id="role">
-                <option value="teacher">معلم</option>
-                <option value="student">طالب</option>
-            </select>
-
-            <button type="submit">تسجيل الدخول</button>
+            <div>
+                <label for="email">البريد الإلكتروني:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div>
+                <label for="password">كلمة المرور:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <div>
+                <button type="submit">تسجيل الدخول</button>
+            </div>
         </form>
     </main>
+
     <footer>
         <p>&copy; 2025 أكاديمية التبيان</p>
     </footer>
-    <script src="app.js"></script>
 </body>
 </html>
