--- a/login.html
+++ b/login.html
@@ -3,44 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول - أكاديمية التبيان</title>
-    <link rel="stylesheet" href="styles.css"> <!-- تأكد من إضافة تنسيق الـ CSS -->
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-    <script src="firebase.js" defer></script> <!-- ربط ملف JavaScript -->
+    <title>تسجيل الدخول</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>أكاديمية التبيان</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">الرئيسية</a></li>
-                <li><a href="login.html">تسجيل الدخول</a></li>
-                <li><a href="register.html">تسجيل جديد</a></li>
-            </ul>
-        </nav>
+        <h1>تسجيل الدخول إلى أكاديمية التبيان</h1>
     </header>
 
-    <main>
-        <h2>تسجيل الدخول</h2>
+    <section>
         <form id="loginForm">
-            <div>
-                <label for="email">البريد الإلكتروني:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div>
-                <label for="password">كلمة المرور:</label>
-                <input type="password" id="password" name="password" required>
-            </div>
-            <div>
-                <button type="submit">تسجيل الدخول</button>
-            </div>
+            <label for="email">البريد الإلكتروني:</label>
+            <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+            <label for="password">كلمة المرور:</label>
+            <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
+            <button type="submit">تسجيل الدخول</button>
         </form>
-    </main>
+    </section>
 
     <footer>
-        <p>&copy; 2025 أكاديمية التبيان</p>
+        <p>ليس لديك حساب؟ <a href="signup.html">سجل الآن</a></p>
     </footer>
+
+    <script src="firebase-config.js"></script> <!-- ربط Firebase -->
+    <script src="login.js"></script> <!-- الرابط إلى الكود الخاص بتسجيل الدخول -->
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="ar">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تسجيل الدخول</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>تسجيل الدخول إلى أكاديمية التبيان</h1>
+    </header>
+
+    <section>
+        <form id="loginForm">
+            <label for="email">البريد الإلكتروني:</label>
+            <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+            <label for="password">كلمة المرور:</label>
+            <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
+            <button type="submit">تسجيل الدخول</button>
+        </form>
+    </section>
+
+    <footer>
+        <p>ليس لديك حساب؟ <a href="signup.html">سجل الآن</a></p>
+    </footer>
+
+    <script src="firebase-config.js"></script> <!-- ربط Firebase -->
+    <script src="login.js"></script> <!-- الرابط إلى الكود الخاص بتسجيل الدخول -->
 </body>
 </html>
