--- a/register.html
+++ b/register.html
@@ -3,42 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل جديد - أكاديمية التبيان</title>
+    <title>التسجيل</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>أكاديمية التبيان</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">الرئيسية</a></li>
-                <li><a href="login.html">تسجيل الدخول</a></li>
-                <li><a href="register.html">تسجيل جديد</a></li>
-            </ul>
-        </nav>
+        <h1>التسجيل في أكاديمية التبيان</h1>
     </header>
-    <main>
-        <h2>تسجيل جديد</h2>
-        <form id="registerForm">
-            <input type="text" id="username" placeholder="اسم المستخدم" required>
-            <input type="email" id="email" placeholder="البريد الإلكتروني" required>
-            <input type="password" id="password" placeholder="كلمة المرور" required>
-            <input type="text" id="location" placeholder="محل الإقامة" required>
-            <select id="role" required>
-                <option value="student">طالب</option>
-                <option value="teacher">معلم</option>
-            </select>
-            <button type="submit">تسجيل</button>
+
+    <section>
+        <form id="signupForm">
+            <label for="email">البريد الإلكتروني:</label>
+            <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+            <label for="password">كلمة المرور:</label>
+            <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
+            <button type="submit">التسجيل</button>
         </form>
-    </main>
+    </section>
+
     <footer>
-        <p>&copy; 2025 أكاديمية التبيان</p>
+        <p>لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
     </footer>
 
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-firestore.js"></script>
-    <script src="firebase.js"></script> <!-- ربط ملف JavaScript هنا -->
+    <script src="firebase-config.js"></script> <!-- ربط Firebase -->
+    <script src="signup.js"></script> <!-- الرابط إلى الكود الخاص بالتسجيل -->
 </body>
 </html>
 <!DOCTYPE html>
@@ -46,41 +34,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل جديد - أكاديمية التبيان</title>
+    <title>التسجيل</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>أكاديمية التبيان</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">الرئيسية</a></li>
-                <li><a href="login.html">تسجيل الدخول</a></li>
-                <li><a href="register.html">تسجيل جديد</a></li>
-            </ul>
-        </nav>
+        <h1>التسجيل في أكاديمية التبيان</h1>
     </header>
-    <main>
-        <h2>تسجيل جديد</h2>
-        <form id="registerForm">
-            <input type="text" id="username" placeholder="اسم المستخدم" required>
-            <input type="email" id="email" placeholder="البريد الإلكتروني" required>
-            <input type="password" id="password" placeholder="كلمة المرور" required>
-            <input type="text" id="location" placeholder="محل الإقامة" required>
-            <select id="role" required>
-                <option value="student">طالب</option>
-                <option value="teacher">معلم</option>
-            </select>
-            <button type="submit">تسجيل</button>
+
+    <section>
+        <form id="signupForm">
+            <label for="email">البريد الإلكتروني:</label>
+            <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+            <label for="password">كلمة المرور:</label>
+            <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
+            <button type="submit">التسجيل</button>
         </form>
-    </main>
+    </section>
+
     <footer>
-        <p>&copy; 2025 أكاديمية التبيان</p>
+        <p>لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
     </footer>
 
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-firestore.js"></script>
-    <script src="firebase.js"></script> <!-- ربط ملف JavaScript هنا -->
+    <script src="firebase-config.js"></script> <!-- ربط Firebase -->
+    <script src="signup.js"></script> <!-- الرابط إلى الكود الخاص بالتسجيل -->
 </body>
 </html>
