تحديث إعدادات Firebase وإضافة التغييرات الأخيرة

--- a/logout.html
+++ b/logout.html
@@ -13,23 +13,12 @@
 
     <section>
         <p>هل أنت متأكد من أنك تريد تسجيل الخروج؟</p>
-        <button onclick="logout()">نعم، تسجيل الخروج</button>
+        <button onclick="window.location.href='logout.php'">نعم، تسجيل الخروج</button>
         <button onclick="window.location.href='index.html'">إلغاء</button>
     </section>
 
     <footer>
         <p>جميع الحقوق محفوظة لأكاديمية التبيان</p>
     </footer>
-
-    <script src="firebase-config.js"></script>
-    <script>
-        function logout() {
-            firebase.auth().signOut().then(() => {
-                window.location.href = 'login.html'; // التوجيه إلى صفحة تسجيل الدخول بعد الخروج
-            }).catch((error) => {
-                console.error("خطأ في تسجيل الخروج: ", error);
-            });
-        }
-    </script>
 </body>
 </html>
