--- a/login.html
+++ b/login.html
@@ -12,11 +12,11 @@
     </header>
 
     <section>
-        <form id="loginForm">
+        <form id="loginForm" method="POST" action="login.php">
             <label for="email">البريد الإلكتروني:</label>
-            <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+            <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required>
             <label for="password">كلمة المرور:</label>
-            <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
+            <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
             <button type="submit">تسجيل الدخول</button>
         </form>
     </section>
@@ -24,39 +24,5 @@
     <footer>
         <p>ليس لديك حساب؟ <a href="signup.html">سجل الآن</a></p>
     </footer>
-
-    <script src="firebase-config.js"></script> <!-- ربط Firebase -->
-    <script src="login.js"></script> <!-- الرابط إلى الكود الخاص بتسجيل الدخول -->
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>تسجيل الدخول إلى أكاديمية التبيان</h1>
-    </header>
-
-    <section>
-        <form id="loginForm">
-            <label for="email">البريد الإلكتروني:</label>
-            <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
-            <label for="password">كلمة المرور:</label>
-            <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
-            <button type="submit">تسجيل الدخول</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>ليس لديك حساب؟ <a href="signup.html">سجل الآن</a></p>
-    </footer>
-
-    <script src="firebase-config.js"></script> <!-- ربط Firebase -->
-    <script src="login.js"></script> <!-- الرابط إلى الكود الخاص بتسجيل الدخول -->
 </body>
 </html>
