--- a/register.html
+++ b/register.html
@@ -12,42 +12,11 @@
     </header>
 
     <section>
-        <form id="signupForm">
+        <form id="signupForm" action="signup.php" method="POST">
             <label for="email">البريد الإلكتروني:</label>
-            <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
+            <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required>
             <label for="password">كلمة المرور:</label>
-            <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
-            <button type="submit">التسجيل</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
-    </footer>
-
-    <script src="firebase-config.js"></script> <!-- ربط Firebase -->
-    <script src="signup.js"></script> <!-- الرابط إلى الكود الخاص بالتسجيل -->
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>التسجيل</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>التسجيل في أكاديمية التبيان</h1>
-    </header>
-
-    <section>
-        <form id="signupForm">
-            <label for="email">البريد الإلكتروني:</label>
-            <input type="email" id="email" placeholder="أدخل بريدك الإلكتروني" required>
-            <label for="password">كلمة المرور:</label>
-            <input type="password" id="password" placeholder="أدخل كلمة المرور" required>
+            <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
             <button type="submit">التسجيل</button>
         </form>
     </section>
