--- a/teacher-dashboard.html
+++ b/teacher-dashboard.html
@@ -5,25 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لوحة تحكم المعلم</title>
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 </head>
 <body>
     <header>
-        <h1>مرحبا بك، معلم أكاديمية التبيان</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">الرئيسية</a></li>
-                <li><a href="profile.html">الملف الشخصي</a></li>
-                <li><a href="logout.html">تسجيل الخروج</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <h1>مرحبا بك، معلم أكاديمية التبيان</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">الرئيسية</a></li>
+                    <li><a href="profile.html">الملف الشخصي</a></li>
+                    <li><a href="logout.html">تسجيل الخروج</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <h2>لوحة تحكم المعلم</h2>
-        <p>هنا يمكنك مشاهدة مواعيد الحصص الخاصة بك.</p>
-        <!-- أضف المزيد من المحتوى حسب الحاجة -->
+        <div class="container">
+            <h2>لوحة تحكم المعلم</h2>
+            <p>هنا يمكنك مشاهدة مواعيد الحصص الخاصة بك.</p>
+            <div id="schedule" class="schedule"></div> <!-- سيتم عرض مواعيد الحصص هنا -->
+        </div>
     </main>
     <footer>
-        <p>&copy; 2025 أكاديمية التبيان</p>
+        <div class="container">
+            <p>&copy; 2025 أكاديمية التبيان</p>
+        </div>
     </footer>
+
+    <script>
+        // إعدادات Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyAzUK08KZM997SmDZiaw2cBciLZoP2e5a0",
+            authDomain: "taleem-6c9b2.firebaseapp.com",
+            projectId: "taleem-6c9b2",
+            storageBucket: "taleem-6c9b2.appspot.com",
+            messagingSenderId: "746506526783",
+            appId: "1:746506526783:web:516f4b2b98562b3dbc588a",
+            measurementId: "G-MEASUREMENT_ID"
+        };
+
+        // تهيئة Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const firestore = firebase.firestore();
+
+        // التحقق من تسجيل الدخول
+        auth.onAuthStateChanged((user) => {
+            if (user) {
+                // استرجاع بيانات المعلم من Firestore
+                const userId = user.uid;
+                const teacherRef = firestore.collection("teachers").doc(userId);
+
+                teacherRef.get().then((doc) => {
+                    if (doc.exists) {
+                        // عرض مواعيد الحصص في الصفحة
+                        const data = doc.data();
+                        const schedule = data.schedule || [];
+                        
+                        const scheduleDiv = document.getElementById("schedule");
+                        if (schedule.length > 0) {
+                            let htmlContent = "<ul>";
+                            schedule.forEach(session => {
+                                htmlContent += `<li>${session}</li>`;
+                            });
+                            htmlContent += "</ul>";
+                            scheduleDiv.innerHTML = htmlContent;
+                        } else {
+                            scheduleDiv.innerHTML = "<p>لا توجد مواعيد حصص حالياً.</p>";
+                        }
+                    } else {
+                        console.log("لم يتم العثور على بيانات المعلم.");
+                    }
+                }).catch((error) => {
+                    console.error("خطأ في جلب بيانات المعلم: ", error);
+                });
+            } else {
+                window.location.href = "login.html"; // توجيه المستخدم إلى صفحة تسجيل الدخول إذا لم يكن مسجلاً الدخول
+            }
+        });
+    </script>
 </body>
 </html>
