--- a/login.html
+++ b/login.html
@@ -1,18 +1,101 @@
 <!DOCTYPE html>
 <html lang="ar">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>تسجيل الدخول</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>تسجيل الدخول - أكاديمية التبيان</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Cairo', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background: linear-gradient(to bottom, #4caf50, #087f23);
+            color: #fff;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        section {
+            background: #fff;
+            color: #333;
+            padding: 20px 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 100%;
+        }
+
+        section form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        section label {
+            margin: 10px 0 5px;
+            font-weight: 600;
+        }
+
+        section input {
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+
+        section button {
+            margin-top: 20px;
+            padding: 10px;
+            background: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.2rem;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        section button:hover {
+            background: #087f23;
+        }
+
+        footer {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: underline;
+        }
+
+        footer a:hover {
+            text-decoration: none;
+        }
+    </style>
 </head>
+
 <body>
     <header>
         <h1>تسجيل الدخول إلى أكاديمية التبيان</h1>
     </header>
 
     <section>
-        <form id="loginForm" method="POST" action="login.php">
+        <form id="loginForm">
             <label for="email">البريد الإلكتروني:</label>
             <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required>
             <label for="password">كلمة المرور:</label>
@@ -24,5 +107,31 @@
     <footer>
         <p>ليس لديك حساب؟ <a href="signup.html">سجل الآن</a></p>
     </footer>
+
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+
+            // Simulated user roles (replace with Firebase or backend logic)
+            const users = {
+                "teacher@example.com": "teacher",
+                "student@example.com": "student"
+            };
+
+            if (users[email]) {
+                if (users[email] === "teacher") {
+                    window.location.href = "teacher-dashboard.html";
+                } else if (users[email] === "student") {
+                    window.location.href = "student-dashboard.html";
+                }
+            } else {
+                alert("خطأ في تسجيل الدخول. الرجاء التحقق من البريد الإلكتروني وكلمة المرور.");
+            }
+        });
+    </script>
 </body>
+
 </html>
