--- a/logout.html
+++ b/logout.html
@@ -4,7 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تسجيل الخروج</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- تنسيق CSS داخل الصفحة -->
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            direction: rtl;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        section {
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        p {
+            font-size: 18px;
+            margin: 20px 0;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 10px;
+            font-size: 16px;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+
+    <!-- إضافة Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 </head>
 <body>
     <header>
@@ -13,12 +70,37 @@
 
     <section>
         <p>هل أنت متأكد من أنك تريد تسجيل الخروج؟</p>
-        <button onclick="window.location.href='logout.php'">نعم، تسجيل الخروج</button>
+        <button onclick="logout()">نعم، تسجيل الخروج</button>
         <button onclick="window.location.href='index.html'">إلغاء</button>
     </section>
 
     <footer>
         <p>جميع الحقوق محفوظة لأكاديمية التبيان</p>
     </footer>
+
+    <script>
+        // إعداد Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyAzUK08KZM997SmDZiaw2cBciLZoP2e5a0",
+            authDomain: "taleem-6c9b2.firebaseapp.com",
+            projectId: "taleem-6c9b2",
+            storageBucket: "taleem-6c9b2.appspot.com",
+            messagingSenderId: "746506526783",
+            appId: "1:746506526783:web:516f4b2b98562b3dbc588a"
+        };
+
+        // تهيئة Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+
+        // وظيفة تسجيل الخروج
+        function logout() {
+            auth.signOut().then(() => {
+                window.location.href = 'login.html'; // إعادة التوجيه إلى صفحة تسجيل الدخول
+            }).catch((error) => {
+                alert('حدث خطأ أثناء تسجيل الخروج: ' + error.message);
+            });
+        }
+    </script>
 </body>
 </html>
