--- a/register.html
+++ b/register.html
@@ -1,18 +1,101 @@
 <!DOCTYPE html>
 <html lang="ar">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>التسجيل</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>التسجيل - أكاديمية التبيان</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Cairo', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background: linear-gradient(to bottom, #4caf50, #087f23);
+            color: #fff;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        section {
+            background: #fff;
+            color: #333;
+            padding: 20px 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            width: 100%;
+        }
+
+        section form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        section label {
+            margin: 10px 0 5px;
+            font-weight: 600;
+        }
+
+        section input {
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            font-size: 1rem;
+        }
+
+        section button {
+            margin-top: 20px;
+            padding: 10px;
+            background: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            font-size: 1.2rem;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        section button:hover {
+            background: #087f23;
+        }
+
+        footer {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: underline;
+        }
+
+        footer a:hover {
+            text-decoration: none;
+        }
+    </style>
 </head>
+
 <body>
     <header>
         <h1>التسجيل في أكاديمية التبيان</h1>
     </header>
 
     <section>
-        <form id="signupForm" action="signup.php" method="POST">
+        <form id="signupForm">
             <label for="email">البريد الإلكتروني:</label>
             <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required>
             <label for="password">كلمة المرور:</label>
@@ -25,7 +108,7 @@
         <p>لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
     </footer>
 
-    <script src="firebase-config.js"></script> <!-- ربط Firebase -->
-    <script src="signup.js"></script> <!-- الرابط إلى الكود الخاص بالتسجيل -->
+    <script src="signup.js"></script>
 </body>
+
 </html>
