--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -1,10 +1,142 @@
+<?php
+// الاتصال بقاعدة البيانات
+$servername = "localhost";
+$username = "root";  // اسم المستخدم لقاعدة البيانات
+$password = "";      // كلمة المرور
+$dbname = "altebean_ac";  // اسم قاعدة البيانات
+
+// إنشاء الاتصال
+$conn = new mysqli($servername, $username, $password, $dbname);
+
+// التحقق من الاتصال
+if ($conn->connect_error) {
+  die("فشل الاتصال بالقاعدة: " . $conn->connect_error);
+}
+
+// استرجاع بيانات الطالب
+$student_id = 1; // يجب تعديل هذا ليتناسب مع معرّف الطالب الذي سجل الدخول
+$sql = "SELECT * FROM students WHERE id = $student_id";
+$result = $conn->query($sql);
+
+if ($result->num_rows > 0) {
+  $student = $result->fetch_assoc();
+} else {
+  echo "لا توجد بيانات للطالب.";
+}
+
+$conn->close();
+?>
 <!DOCTYPE html>
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>لوحة تحكم الطالب - أكاديمية التبيان</title>
-    <link rel="stylesheet" href="styles.css"> <!-- تأكد من إضافة تنسيق الـ CSS -->
+    
+    <!-- تنسيق CSS داخل الصفحة -->
+    <style>
+        /* تنسيق الصفحة بشكل عام */
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        nav ul li {
+            display: inline-block;
+            margin: 0 15px;
+        }
+
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        main {
+            padding: 20px;
+            background-color: white;
+            margin: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #333;
+        }
+
+        section {
+            margin-bottom: 20px;
+        }
+
+        h3 {
+            color: #4CAF50;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        ul li {
+            background-color: #f9f9f9;
+            margin: 5px 0;
+            padding: 10px;
+            border-radius: 5px;
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        form {
+            background-color: #f9f9f9;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        input[type="file"] {
+            margin: 10px 0;
+        }
+    </style>
+
+    <!-- إضافة Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js"></script>
 </head>
 <body>
     <header>
@@ -13,7 +145,7 @@
             <ul>
                 <li><a href="index.html">الرئيسية</a></li>
                 <li><a href="student-dashboard.html">لوحة التحكم</a></li>
-                <li><a href="logout.html" id="logoutBtn">تسجيل الخروج</a></li>
+                <li><a href="#" id="logoutBtn">تسجيل الخروج</a></li>
             </ul>
         </nav>
     </header>
@@ -25,24 +157,24 @@
         <section>
             <h3>حصصك المتبقية</h3>
             <ul id="remainingClasses">
-                <li>حصة 1: 8 حصص</li>
-                <li>حصة 2: 12 حصص</li>
-                <li>حصة 3: 16 حصص</li>
+                <li>حصة 1: <span id="remainingClasses1">0</span> حصص</li>
+                <li>حصة 2: <span id="remainingClasses2">0</span> حصص</li>
+                <li>حصة 3: <span id="remainingClasses3">0</span> حصص</li>
             </ul>
         </section>
 
         <!-- إشعار حالة الدفع -->
         <section>
             <h3>إشعار حالة الدفع</h3>
-            <p id="paymentStatus">لم يتم دفع الرسوم بعد.</p>
+            <p id="paymentStatus">انتظر قليلاً...</p>
         </section>
 
         <!-- رفع إيصال الدفع -->
         <section>
             <h3>رفع إيصال الدفع</h3>
-            <form id="uploadReceiptForm">
+            <form id="uploadReceiptForm" action="upload_receipt.php" method="post" enctype="multipart/form-data">
                 <label for="receiptImage">اختر صورة إيصال الدفع:</label>
-                <input type="file" id="receiptImage" accept="image/*" required>
+                <input type="file" id="receiptImage" name="receiptImage" accept="image/*" required>
                 <button type="submit">رفع الإيصال</button>
             </form>
         </section>
@@ -52,65 +184,51 @@
         <p>&copy; 2025 أكاديمية التبيان</p>
     </footer>
 
-    <script src="firebase.js"></script>
-    <script src="student-dashboard.js"></script> <!-- ربط ملف JavaScript الخاص بالطالب -->
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>لوحة تحكم الطالب - أكاديمية التبيان</title>
-    <link rel="stylesheet" href="styles.css"> <!-- تأكد من إضافة تنسيق الـ CSS -->
-</head>
-<body>
-    <header>
-        <h1>أكاديمية التبيان - لوحة تحكم الطالب</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">الرئيسية</a></li>
-                <li><a href="student-dashboard.html">لوحة التحكم</a></li>
-                <li><a href="logout.html" id="logoutBtn">تسجيل الخروج</a></li>
-            </ul>
-        </nav>
-    </header>
+    <script>
+        // إعداد Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyAzUK08KZM997SmDZiaw2cBciLZoP2e5a0",
+            authDomain: "taleem-6c9b2.firebaseapp.com",
+            projectId: "taleem-6c9b2",
+            storageBucket: "taleem-6c9b2.appspot.com",
+            messagingSenderId: "746506526783",
+            appId: "1:746506526783:web:516f4b2b98562b3dbc588a"
+        };
 
-    <main>
-        <h2>مرحبًا بك في لوحة تحكم الطالب</h2>
+        // تهيئة Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const auth = firebase.auth();
+        const database = firebase.database();
 
-        <!-- عرض الحصص المتبقية -->
-        <section>
-            <h3>حصصك المتبقية</h3>
-            <ul id="remainingClasses">
-                <li>حصة 1: 8 حصص</li>
-                <li>حصة 2: 12 حصص</li>
-                <li>حصة 3: 16 حصص</li>
-            </ul>
-        </section>
+        // تسجيل الخروج
+        document.getElementById('logoutBtn').addEventListener('click', () => {
+            auth.signOut().then(() => {
+                window.location.href = 'login.html'; // إعادة التوجيه إلى صفحة تسجيل الدخول
+            }).catch((error) => {
+                alert('حدث خطأ أثناء تسجيل الخروج: ' + error.message);
+            });
+        });
 
-        <!-- إشعار حالة الدفع -->
-        <section>
-            <h3>إشعار حالة الدفع</h3>
-            <p id="paymentStatus">لم يتم دفع الرسوم بعد.</p>
-        </section>
+        // الحصول على بيانات الطالب من قاعدة بيانات Firebase
+        const userId = auth.currentUser ? auth.currentUser.uid : null;
+        if (userId) {
+            const studentRef = database.ref('students/' + userId);
+            studentRef.once('value', (snapshot) => {
+                const studentData = snapshot.val();
+                if (studentData) {
+                    // عرض بيانات الطالب
+                    document.getElementById('remainingClasses1').innerText = studentData.remaining_classes_1;
+                    document.getElementById('remainingClasses2').innerText = studentData.remaining_classes_2;
+                    document.getElementById('remainingClasses3').innerText = studentData.remaining_classes_3;
 
-        <!-- رفع إيصال الدفع -->
-        <section>
-            <h3>رفع إيصال الدفع</h3>
-            <form id="uploadReceiptForm">
-                <label for="receiptImage">اختر صورة إيصال الدفع:</label>
-                <input type="file" id="receiptImage" accept="image/*" required>
-                <button type="submit">رفع الإيصال</button>
-            </form>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 أكاديمية التبيان</p>
-    </footer>
-
-    <script src="firebase.js"></script>
-    <script src="student-dashboard.js"></script> <!-- ربط ملف JavaScript الخاص بالطالب -->
+                    document.getElementById('paymentStatus').innerText = studentData.payment_status === 'paid' ? 'تم دفع الرسوم.' : 'لم يتم دفع الرسوم بعد.';
+                } else {
+                    document.getElementById('paymentStatus').innerText = 'لا توجد بيانات للطالب.';
+                }
+            });
+        } else {
+            document.getElementById('paymentStatus').innerText = 'لم يتم التعرف على الطالب.';
+        }
+    </script>
 </body>
 </html>
