--- a/student.html
+++ b/student.html
@@ -1,63 +1,179 @@
-<?php
-// الاتصال بقاعدة البيانات
-$servername = "localhost";
-$username = "root";  // اسم المستخدم لقاعدة البيانات
-$password = "";      // كلمة المرور
-$dbname = "altebean_ac";  // اسم قاعدة البيانات
-
-// إنشاء الاتصال
-$conn = new mysqli($servername, $username, $password, $dbname);
-
-// التحقق من الاتصال
-if ($conn->connect_error) {
-  die("فشل الاتصال بالقاعدة: " . $conn->connect_error);
-}
-
-// استرجاع بيانات الطالب
-$student_id = 1; // يجب تعديل هذا ليتناسب مع معرّف الطالب الذي سجل الدخول
-$sql = "SELECT * FROM students WHERE id = $student_id";
-$result = $conn->query($sql);
-
-if ($result->num_rows > 0) {
-  $student = $result->fetch_assoc();
-} else {
-  echo "لا توجد بيانات للطالب.";
-}
-
-$conn->close();
-?>
-
 <!DOCTYPE html>
 <html lang="ar">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>الطالب</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>صفحة الطالب</title>
+
+    <!-- ربط مكتبات Firebase -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
+
+    <style>
+        /* CSS لتنسيق الصفحة */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f7f6;
+            color: #333;
+            direction: rtl;
+        }
+
+        .container {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        h2 {
+            color: #2c7a2e;
+            font-size: 2.5em;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+
+        section {
+            background-color: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        h3 {
+            color: #3a3a3a;
+            font-size: 1.8em;
+            margin-bottom: 15px;
+        }
+
+        p {
+            font-size: 1.2em;
+        }
+
+        ul {
+            list-style-type: none;
+        }
+
+        ul li {
+            padding: 10px;
+            background-color: #e0f7da;
+            margin-bottom: 10px;
+            border-radius: 6px;
+        }
+
+        button {
+            padding: 10px 20px;
+            background-color: #2c7a2e;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1.2em;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #1f5d1f;
+        }
+
+        input[type="file"] {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
+
 <body>
-  <h2>مرحبًا بك في صفحة الطالب</h2>
-  
-  <h3>الحصص المتبقية</h3>
-  <p id="remaining-sessions">عدد الحصص المتبقية: <?php echo $student['remaining_classes']; ?></p>
+    <div class="container">
+        <header>
+            <h2>مرحبًا بك في صفحة الطالب</h2>
+        </header>
 
-  <h3>العروض الشهرية</h3>
-  <ul>
-    <li>8 حصص - 80 SAR</li>
-    <li>12 حصة - 110 SAR</li>
-    <li>16 حصة - 140 SAR</li>
-  </ul>
+        <section id="student-info">
+            <h3>الحصص المتبقية</h3>
+            <p id="remaining-sessions">جاري تحميل البيانات...</p>
+        </section>
 
-  <h3>إشعار دفع رسوم الاشتراك</h3>
-  <p>تم دفع الرسوم: <?php echo $student['payment_status'] == 'paid' ? 'تم دفع الرسوم بنجاح.' : 'لم يتم دفع الرسوم بعد.'; ?></p>
+        <section id="monthly-offers">
+            <h3>العروض الشهرية</h3>
+            <ul>
+                <li>8 حصص - 80 SAR</li>
+                <li>12 حصة - 110 SAR</li>
+                <li>16 حصة - 140 SAR</li>
+            </ul>
+        </section>
 
-  <h3>رفع إيصال الدفع</h3>
-  <form id="upload-receipt-form" action="upload_receipt.php" method="post" enctype="multipart/form-data">
-    <input type="file" id="receipt" name="receipt" accept="image/*" required>
-    <button type="submit">رفع الإيصال</button>
-  </form>
+        <section id="payment-status">
+            <h3>إشعار دفع رسوم الاشتراك</h3>
+            <p id="payment-status-message">جاري تحميل حالة الدفع...</p>
+        </section>
 
-  <script src="js/firebase-config.js"></script>
-  <script src="js/student.js"></script>
+        <section id="upload-receipt">
+            <h3>رفع إيصال الدفع</h3>
+            <form id="upload-receipt-form" action="upload_receipt.php" method="post" enctype="multipart/form-data">
+                <input type="file" id="receipt" name="receipt" accept="image/*" required>
+                <button type="submit">رفع الإيصال</button>
+            </form>
+        </section>
+    </div>
+
+    <!-- إعداد Firebase والتفاعل مع Firestore -->
+    <script>
+        // إعدادات Firebase الخاصة بك
+        const firebaseConfig = {
+            apiKey: "AIzaSyAzUK08KZM997SmDZiaw2cBciLZoP2e5a0",
+            authDomain: "taleem-6c9b2.firebaseapp.com",
+            projectId: "taleem-6c9b2",
+            storageBucket: "taleem-6c9b2.appspot.com",
+            messagingSenderId: "746506526783",
+            appId: "1:746506526783:web:516f4b2b98562b3dbc588a"
+        };
+
+        // تهيئة Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore();
+        const auth = firebase.auth();
+
+        // التحقق من حالة المستخدم (هل هو مسجل دخول أم لا)
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                // جلب بيانات الطالب من Firestore
+                const studentRef = db.collection('students').doc(user.uid);
+
+                studentRef.get().then(doc => {
+                    if (doc.exists) {
+                        const data = doc.data();
+                        
+                        // عرض الحصص المتبقية
+                        document.getElementById('remaining-sessions').innerText = `عدد الحصص المتبقية: ${data.remaining_classes}`;
+
+                        // عرض حالة الدفع
+                        const paymentStatus = data.payment_status === 'paid' ? 'تم دفع الرسوم بنجاح.' : 'لم يتم دفع الرسوم بعد.';
+                        document.getElementById('payment-status-message').innerText = paymentStatus;
+                    } else {
+                        console.log("لم يتم العثور على بيانات الطالب.");
+                    }
+                }).catch(error => {
+                    console.error("حدث خطأ في جلب البيانات: ", error);
+                });
+            } else {
+                // إذا لم يكن المستخدم مسجل دخول، يمكنك توجيهه إلى صفحة تسجيل الدخول
+                window.location.href = 'login.html';
+            }
+        });
+    </script>
 </body>
+
 </html>
