--- a/teacher.html
+++ b/teacher.html
@@ -1,37 +1,143 @@
 <!DOCTYPE html>
 <html lang="ar">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>المعلم</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تسجيل الدخول - أكاديمية التبيان</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Cairo', sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background: linear-gradient(to bottom, #6a11cb, #2575fc);
+            color: #fff;
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        section {
+            background: #fff;
+            color: #333;
+            padding: 25px 35px;
+            border-radius: 15px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+            max-width: 420px;
+            width: 100%;
+        }
+
+        section form {
+            display: flex;
+            flex-direction: column;
+        }
+
+        section label {
+            margin: 15px 0 5px;
+            font-weight: 600;
+        }
+
+        section input {
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            font-size: 1rem;
+        }
+
+        section input:focus {
+            outline: none;
+            border-color: #6a11cb;
+        }
+
+        section button {
+            margin-top: 20px;
+            padding: 12px;
+            background: #2575fc;
+            color: #fff;
+            border: none;
+            border-radius: 8px;
+            font-size: 1.2rem;
+            cursor: pointer;
+            transition: transform 0.2s, background 0.3s;
+        }
+
+        section button:hover {
+            background: #6a11cb;
+            transform: scale(1.05);
+        }
+
+        footer {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: underline;
+        }
+
+        footer a:hover {
+            text-decoration: none;
+        }
+    </style>
 </head>
+
 <body>
-  <h2>مرحبًا بك في صفحة المعلم</h2>
-  
-  <h3>المواعيد والحصص</h3>
-  <table id="lessons-table">
-    <tr>
-      <th>التاريخ</th>
-      <th>الوقت</th>
-      <th>الموضوع</th>
-    </tr>
-    <!-- سيتم ملء هذه البيانات من Firebase -->
-  </table>
+    <header>
+        <h1>تسجيل الدخول إلى أكاديمية التبيان</h1>
+    </header>
 
-  <h3>تسجيل المتابعة بعد الحصة</h3>
-  <form id="lesson-follow-up-form">
-    <label for="lesson-notes">الملاحظات:</label>
-    <textarea id="lesson-notes" name="lesson-notes" rows="4"></textarea>
-    <button type="submit">تسجيل الملاحظات</button>
-  </form>
+    <section>
+        <form id="loginForm">
+            <label for="email">البريد الإلكتروني:</label>
+            <input type="email" id="email" name="email" placeholder="أدخل بريدك الإلكتروني" required>
+            <label for="password">كلمة المرور:</label>
+            <input type="password" id="password" name="password" placeholder="أدخل كلمة المرور" required>
+            <button type="submit">تسجيل الدخول</button>
+        </form>
+    </section>
 
-  <h3>إجمالي المبالغ المستحقة</h3>
-  <p id="total-amount">0 EGP</p>
+    <footer>
+        <p>ليس لديك حساب؟ <a href="signup.html">سجل الآن</a></p>
+    </footer>
 
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
-  <script src="js/firebase-config.js"></script>
-  <script src="js/teacher.js"></script>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', (e) => {
+            e.preventDefault();
+
+            const email = document.getElementById('email').value.trim();
+            const password = document.getElementById('password').value;
+
+            // Simulated role assignment (replace with Firebase logic)
+            const users = {
+                "teacher@example.com": "teacher",
+                "student@example.com": "student"
+            };
+
+            if (users[email]) {
+                if (users[email] === "teacher") {
+                    window.location.href = "teacher-dashboard.html";
+                } else if (users[email] === "student") {
+                    window.location.href = "student-dashboard.html";
+                }
+            } else {
+                alert("خطأ في تسجيل الدخول. الرجاء التحقق من البريد الإلكتروني وكلمة المرور.");
+            }
+        });
+    </script>
 </body>
+
 </html>
